# OCDNN

./: .gitignore  CMakeLists.txt  LICENSE  README.md  erroroutput.txt  todo.txt
output-data/: l0-matrixBf.txt  l1-conv-out.txt  matA.txt  matrixL0d.txt  matrixL1d.txt  matrixL1h.txt  matrixW01h.txt  p1-mm-f32.txt  p2-mm-int16.txt  p2-mm-int8.txt
src/: #phase5.cpp#  CMakeLists.txt  image_convert.cpp  lenet5.cpp  lenet5.h  phase1.cpp  phase1.h  phase2.cpp  phase2.h  phase3.cpp  phase3.h  phase3_conv_f16.cpp  phase4.cpp  phase4.h  phase5.cpp  phase5.h  phase6_main.cpp  phase6_main.h  phase6_model.cpp  phase6_model.h  phase6_ref.cpp  phase6_ref.h  vgg.cpp  vgg.h
src/half/: CMakeLists.txt  half.cpp  half.h  mat.c
src/kernels/: convolute.cl  convolution-db.cl  convolution-double.cl  convolution-image.cl  convolution-oc.cl  convolution.cl  mad.cl  p2-mm-f32.cl  p2-mm-int32.cl  p3-conv16.cl  p3-conv32.cl  p5-conv64.cl  p5-util.cl  vgg-conv.cl  vgg-util.cl
src/opencl_base/: opencl_base.cpp  opencl_base.h
